2011-11-12  Roland Clobus <rclobus@rclobus.nl>
	* editor/gtk/editor.c, common/gtk/gtkcompat.h, common/gtk/theme.c,
	common/gtk/common_gtk.h, common/gtk/guimap.c, common/gtk/player-icon.c,
	common/gtk/select-game.c, common/gtk/common_gtk.c, configure.ac,
	server/gtk/main.c, client/gtk/plenty.c, client/gtk/name.c,
	client/gtk/resource-view.gob, client/gtk/gold.c, client/gtk/player.c,
	client/gtk/legend.c, client/gtk/quote-view.c, client/gtk/gameover.c,
	client/gtk/discard.c, client/gtk/monopoly.c,
	client/gtk/settingscreen.c, client/gtk/gui.c, client/gtk/identity.c,
	client/gtk/connect.c, client/gtk/histogram.c: Enable GSEAL_ENABLE.

2011-11-07  Roland Clobus <rclobus@rclobus.nl>
	* editor/gtk/game-resources.c, editor/gtk/game-devcards.c,
	editor/gtk/game-buildings.c, editor/gtk/game-settings.c,
	common/gtk/aboutbox.c, server/gtk/main.c: Some preparation for Gtk+3.

2011-11-06  Roland Clobus <rclobus@rclobus.nl>
	* server/gtk/main.c: Removed Gtk-CRITICAL messages by setting the
	togglebutton after the items to be disabled have been created.

2011-10-30  Roland Clobus <rclobus@rclobus.nl>
	* configure.ac: Work version is 14.1

2011-10-30  Roland Clobus <rclobus@rclobus.nl>
	* Released 0.12.5

2011-10-30  Roland Clobus <rclobus@rclobus.nl>
	* server/player.c, server/server.c, server/server.h, server/pregame.c:
	Forget players in the lobby when they disconnect. Don't start the lobby
	game.
	* admin-scripts/meta.sh: Allow more games to be hosted.
	* client/gtk/resource-view.gob: Don't request more space for the
	single resource view.
	* common/gtk/guimap.c, server/gtk/main.c, server/turn.c,
	server/pregame.c, client/gtk/frontend.c, client/gtk/gui.c,
	client/gtk/connect.c, client/common/client.c, client/ai/greedy.c:
	Fixed some shadowed variable names.
	* client/ai/greedy.c: Fixed a datatype when finding the best road.
	* client/gtk/gui.c: Used a simpler routine to build the icons for the
	toolbar.
	* server/develop.c: Added extra check to see if the development card