@@ -1,3 +1,7 @@
+2011-11-21  Roland Clobus <rclobus@rclobus.nl>
+	* common/gtk/theme.c, common/gtk/theme.h: Speedup of server-gtk by not
+	rescaling the theme when it is not necessary.
+
 2011-11-12  Roland Clobus <rclobus@rclobus.nl>
 	* editor/gtk/editor.c, common/gtk/gtkcompat.h, common/gtk/theme.c,
 	common/gtk/common_gtk.h, common/gtk/guimap.c, common/gtk/player-icon.c,
